syntax = "proto3";

package school;

service StudentService {
    rpc GetStudent(Empty) returns (Student);
}

message Empty {

}

message Student {
    int32 student_id = 1;
    string first_name = 2;
    string last_name = 3;
}
